--- a/Dio.me/FullStack Developer/HTML e CSS/sim/Projeto Jaum ROMS/Nito.css
+++ b/Dio.me/FullStack Developer/HTML e CSS/sim/Projeto Jaum ROMS/Nito.css
@@ -6,11 +6,13 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    background-color: gray;
     padding: 10px;
     border: 3px solid black;
     border-radius: 10px;
     max-width: 500px;
+}
+.post background{
+    color: black;
 }
 
 .mediafire {
