--- a/Dio.me/FullStack Developer/Flexbox/Landing Page/style.css
+++ b/Dio.me/FullStack Developer/Flexbox/Landing Page/style.css
@@ -9,6 +9,7 @@
     margin: auto;
     max-width: 992px;
     width: 100%;
+    min-width: 320px;
 }
 ul{
     list-style: none;
@@ -51,9 +52,14 @@ header .menu{
     height: 100vh;
     align-items: center;
     justify-content: space-between;
+
 }
 .texto-apresentação{
     min-height: 200px;
+
+}
+.apresentação .texto-apresentação{
+    min-width: 200px;
 
 }
 .texto-apresentação h1{
@@ -165,6 +171,7 @@ header .menu{
     margin-right: 20px;
     padding: 10px;
     max-width: 240px;
+    margin-bottom: 20px;
 }
 .item-plano .btn{
     margin: auto;
@@ -213,4 +220,42 @@ footer .footer{
     display: flex;
     margin-top: 20px;
     align-items: center;
+}
+
+/* mobile */
+@media(max-width: 992px){
+    .flex-container{
+        flex-direction: column;
+    }
+    .apresentação{
+        flex-direction: column-reverse;
+        
+    }
+    .apresentação .texto-apresentação{
+        width: 100%;
+    }
+    #quem-somos{
+        flex-direction: column-reverse;
+    }
+    #quem-somos img{
+        min-width: 320px;
+        margin: auto;
+    }
+    .list-serviços{
+        flex-direction: column;
+    }
+ 
+    .item-serviço img{
+        width: 50%;
+        margin: auto;
+    }
+    .list-planos{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .list-planos .item-plano{
+        max-width: 90%;
+        margin: auto;
+        width: 100%;
+    }
 }
