--- a/Dio.me/FullStack Developer/Flexbox/Instagram login/estilo..css
+++ b/Dio.me/FullStack Developer/Flexbox/Instagram login/estilo..css
@@ -1,5 +1,4 @@
 body{
-
     background-image: linear-gradient(to top left, #5442D6, #CC2581,#F9C160, #F97449);
 }
 *{ /*assim faz alterações globais no css, background para ele não ficar com o tamanho da tela inicial e quando descer ficar sem o gradiente*/
@@ -19,6 +18,7 @@ body{
     height: 450px;
     align-content: center;
     margin-bottom: 40px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .flex-container{
     display: flex;
@@ -56,6 +56,7 @@ body{
     color: white;
     text-decoration: none;
     margin-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 p{
     display: flex;
@@ -77,6 +78,7 @@ p{
     text-decoration: none;
     margin-left: 10px;
     margin-top: 3px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .face-img{
     height: 20px;
@@ -87,18 +89,5 @@ p{
     align-self: center;
     height: auto;
     margin-bottom: 15px;
-}
-footer{
-    max-height: 50px;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    display: flex;
-    align-items: center;
-}
-.pe h1{
-    display: flex;
-    color: white;
-    justify-content: center;
-    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
