--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/estilo.css
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/estilo.css
@@ -1,4 +1,5 @@
 body{
+    background: rgb(53, 53, 179);
     font: normal 20pt arial;
     display: flex;
     align-items: center;
@@ -8,23 +9,17 @@ body{
     flex-direction: column;
 }
 
-
 section{
     display: flex;
-    flex-direction: column;
-    align-items: center;
     margin: auto;
     border-radius: 10px;
     background-color: white;
     width: 500px;
-    height: 300px;
+    height: 500px;
     padding: 15px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
 
 }
 footer{
     font-style: italic;
-}
-#manha{
-    
 }
