--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/estilo.css
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX005/estilo.css
@@ -1,6 +1,6 @@
 body{
     background: rgb(53, 53, 179);
-    font: normal 20pt arial;
+    font: normal 20pt arial ;
     display: flex;
     align-items: center;
     margin: auto;
@@ -10,12 +10,14 @@ body{
 }
 
 section{
+    font-size: 18pt;
     display: flex;
+    flex-direction: column;
     margin: auto;
     border-radius: 10px;
     background-color: white;
     width: 500px;
-    height: 500px;
+    height: auto;
     padding: 15px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
 
