--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX007/estilo.css
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX007/estilo.css
@@ -12,7 +12,7 @@ body{
 section{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin: auto;
     border-radius: 10px;
     background-color: white;
@@ -21,11 +21,6 @@ section{
     padding: 15px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
 
-}
-div{
-    display: flex;
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
 }
 footer{
     font-style: italic;
