--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX006/estilo.css
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX006/estilo.css
@@ -1,19 +1,14 @@
 body{
     font: normal 20pt arial;
-    display: flex;
-    align-items: center;
-    margin: auto;
-    max-width: fit-content;
-    max-height: fit-content;
-    flex-direction: column;
+    background: rgb(48, 48, 230);
 }
 
+header{
+    color: white;
+    text-align: center;
+}
 
 section{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin: auto;
     border-radius: 10px;
     background-color: white;
     width: 500px;
@@ -22,11 +17,7 @@ section{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
 
 }
-div{
-    display: flex;
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
-}
+
 footer{
     font-style: italic;
 }
