--- a/Dio.me/FullStack Developer/Javascript/Exercicios/EX006/estilo.css
+++ b/Dio.me/FullStack Developer/Javascript/Exercicios/EX006/estilo.css
@@ -1,18 +1,21 @@
 body{
     font: normal 20pt arial;
     background: rgb(48, 48, 230);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 header{
     color: white;
     text-align: center;
+
 }
 
 section{
     border-radius: 10px;
     background-color: white;
     width: 500px;
-    height: 300px;
     padding: 15px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) ;
 
