--- a/Dio.me/FullStack Developer/Flexbox/Instagram login/estilo..css
+++ b/Dio.me/FullStack Developer/Flexbox/Instagram login/estilo..css
@@ -6,6 +6,7 @@ body{
     background-attachment: fixed;
 }
 .corpo{
+    font-family: Arial, Helvetica, sans-serif;
     display: flex; 
     align-items: center;
     margin: auto;
@@ -21,14 +22,15 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .flex-container{
+    font-family: Arial;
     display: flex;
+    align-items: center;
     border: 1px solid rgba(0, 0, 0, 0.171);
     height: 300px;
     width: 450px;
     background-color: white;
     margin-bottom: 40px;
     flex-direction: column;
-    font-family:Times;
 }
 .flex-item{
     display: flex;
@@ -39,6 +41,7 @@ body{
     align-self: center;
     margin-top: 5px;
 }
+
 .img{
     width: 180px;
     height: 80px;
@@ -66,6 +69,9 @@ p{
     height: 1px;
     margin: 15px;
     align-items: center;
+}
+.esqueceu{
+    margin: 15px;
 }
 .facebook{
     display: flex;
