--- a/Dio.me/FullStack Developer/projeto/treino carrossel/sytle.css
+++ b/Dio.me/FullStack Developer/projeto/treino carrossel/sytle.css
@@ -27,4 +27,32 @@ body{
     width: 70px;
     height: 10px;
     border: 2px solid #fff;
+    cursor: pointer;
+}
+
+.bar:hover{
+    background-color: #fff;
+    transition: 0.5s;
+}
+
+input{
+    display: none;
+}
+.slide{
+    display: flex;
+    flex-direction: row;
+    width: 500%;
+    height: 100%;
+}
+.slide{
+    width: 20%;
+    transition: .5s;
+}
+
+
+#slide1:checked ~ .s1{
+    margin-left: 0;
+}
+#slide2:checked~ .s1{
+    margin-left: -20%;
 }
