--- a/Dio.me/FullStack Developer/projeto/treino carrossel/sytle.css
+++ b/Dio.me/FullStack Developer/projeto/treino carrossel/sytle.css
@@ -40,7 +40,6 @@ input{
 }
 .slide{
     display: flex;
-    flex-direction: row;
     width: 500%;
     height: 100%;
 }
@@ -50,9 +49,9 @@ input{
 }
 
 
-#slide1:checked ~ .s1{
+#slide1:checked{
     margin-left: 0;
 }
-#slide2:checked~ .s1{
+#slide2:checked{
     margin-left: -20%;
 }
