--- a/Dio.me/FullStack Developer/projeto/treino carrossel/sytle.css
+++ b/Dio.me/FullStack Developer/projeto/treino carrossel/sytle.css
@@ -56,6 +56,12 @@ input{
 #slide1:checked ~ .s1 {
     margin-left: 0;
 }
+/*AQUI COMEÇA AS ALTERAÇÕES */
+
+
+
+
+
 #slide2:checked ~ .s1 {
     margin: -10% ;
 }
