--- a/Dio.me/FullStack Developer/projeto/netflix-clone-master/style/main.css
+++ b/Dio.me/FullStack Developer/projeto/netflix-clone-master/style/main.css
@@ -43,10 +43,42 @@ header nav a:hover{
 /*FILME*/
 .filme-principal{
     font-size: 16px ;
-    background:url('C:/Users/Larissa Yamile/Desktop/Dev Path/Dio.me/FullStack Developer/projeto/netflix-clone-master/img/capa-house.jpg');
+    background:linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%) , url('/Dio.me/FullStack Developer/projeto/netflix-clone-master/img/capa-house.jpg');
     
     height: 400px;
     background-size: cover;
-    background-color: rgb(119, 119, 119);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filme-principal .descriçao{
+    margin-top: 15px;
+    margin-bottom: 15px;
+
+}
+
+.titulo{
+    margin-top: 15%;
+    font-size: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.botao{
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+    padding: 15px 10px;
+    margin-right: 15px;
+    font-size: 12px;
+    cursor: pointer;
+    
+}
+.botao:hover{
+    background-color: rgb(255, 255, 255);
+    color: #141414;
+    transition: .3s ease all;
+
 }
 /*ACABA O FILME*/
