--- a/Dio.me/FullStack Developer/projeto/netflix-clone-master/style/responsive.css
+++ b/Dio.me/FullStack Developer/projeto/netflix-clone-master/style/responsive.css
@@ -6,6 +6,7 @@
     .botao{
         margin-top: 5px;
         width: 300px;
+        height: 60px;
     }
     }
 @media screen and (min-width:1000px){
