--- a/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
@@ -38,3 +38,38 @@ header, .navbar{
 .navbar-expand-lg .navbar-nav .nav-link{
     padding: 1rem .8rem;
 }
+
+/*Slider*/
+.container-fluid{
+    padding: 0;
+}
+#mainSlider .carousel-inner .carousel-item{
+    height: 90vh;
+}
+#mainSlider .carousel-caption h2{
+    font-size: 50px;
+    margin-bottom: 5% ;
+}
+#mainSlider .carousel-caption, p{
+    font-size: 20px;
+    color: #fff;
+    margin-bottom: 50px;
+}
+#mainSlider .main-btn{
+    background-color:transparent;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    height: 60px;
+    width: 200px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    border: 3px solid #65DAF9;
+    transition: .5s;
+}
+#mainSlider .main-btn:hover{
+    background-color: #65DAF9;
+}
+.carousel-indicators .active{
+    background-color: #65DAF9;
+}
