--- a/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
@@ -38,6 +38,12 @@ header, .navbar{
 .navbar-expand-lg .navbar-nav .nav-link{
     padding: 1rem .8rem;
 }
+.nav-item:hover{
+    cursor: pointer;
+    font-size: 17px;
+    transition: .5s;
+}
+/*ACABA A BARRA DE NAVEGAÇÃO*/
 
 /*Slider*/
 .container-fluid{
@@ -72,4 +78,15 @@ header, .navbar{
 }
 .carousel-indicators .active{
     background-color: #65DAF9;
+}
+/*ACABOU O SLIDER*/
+
+/*sOBRE A AGÊNCIA*/
+.col-md-6 p{
+    color: #353d41;
+    margin: 0;
+}
+
+#about-list li{
+    text-decoration: none;
 }
