--- a/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
@@ -120,3 +120,9 @@ header, .navbar{
     margin-right: 10px;
 }
 /*AQUI ACABA A SESSÃO SOBRE A AGÊNCIA*/
+
+/*SERVIÇOS*/
+#services-area  p{
+    color: #333;
+}
+/*ACABA SERVIÇOS*/
