--- a/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
@@ -125,4 +125,19 @@ header, .navbar{
 #services-area  p{
     color: #333;
 }
+.service-box{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.service-box i, .service-box h4{
+    transition: .5s;
+}
+.service-box i{
+    font-size: 36px;
+    margin-bottom: 15px;
+    color: #444;
+}
+.service-box:hover > i, .service-box:hover > h4{
+    color: #65DAF9;
+}
 /*ACABA SERVIÇOS*/
