--- a/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
+++ b/Dio.me/FullStack Developer/Bootstrap/projeto/estilo.css
@@ -141,3 +141,19 @@ header, .navbar{
     color: #65DAF9;
 }
 /*ACABA SERVIÇOS*/
+
+/*DADOS DA EMPRESA*/
+.circle-box div{
+    padding: 0 40px;
+}
+.progressbar-text {
+    font-weight: bold;
+    font-size: 32px;
+}
+#data-area p {
+    color: #fff;
+    text-align: center;
+    font-size: 26px;
+    margin-top: 20px;
+}
+/*ACABA OS DADOS DA EMPRESA*/
