--- a/Dio.me/FullStack Developer/React/my-app/src/frase.module.css
+++ b/Dio.me/FullStack Developer/React/my-app/src/frase.module.css
@@ -1,1 +1,10 @@
 /*Classes com - não funcionam, use . ou _*/
+.Frase.container{
+     background-color: #333;
+     border: 1px solid black;
+}
+.FraseContent{
+    color: #fff;
+    background-color: #333;
+    margin: 0;
+}
